2011-07-30  Kirit Saelensminde  <kirit@felspar.com>
 Made some changes to support Boost 1.46.0.

2011-07-22  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug that was causing occasional data packets to be lost when sending large blocks of data.

2011-04-13  Kirit Saelensminde  <kirit@felspar.com>
 Implemented a proper exception type for a particular networking error.

2011-04-10  Kirit Saelensminde  <kirit@felspar.com>
 Improved the time out handling for large downloads where the download size is known in advance.
 Added in a connect timeout which defaults to ten seconds.

2011-03-02  Kirit Saelensminde  <kirit@felspar.com>
 Implemented a more full version of the email address parser so it can handle names as well as well as email addresses.

2011-02-11  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug that was causing the protocol to be lost when a relative URL was being generated.

2010-12-10  Kirit Saelensminde  <kirit@felspar.com>
 The URL parser now supports (at least some) custom query string formats. Also added in limited %XX decoding in the query string values.

2010-11-16  Kirit Saelensminde  <kirit@felspar.com>
 Added a very simple HTTP PUT based log sink for shipping logs to another machine.

2010-11-04  Kirit Saelensminde  <kirit@felspar.com>
 URLs are now usable directly as keys in STL containers as std::less is supported.

2010-10-15  Kirit Saelensminde  <kirit@felspar.com>
 FOST authentication for the server version of requests is now supported.

2010-10-08  Kirit Saelensminde  <kirit@felspar.com>
 fostlib::email_address instances can now be coerced from their JSON representation.
 A new attach member on fostlib::mime_envelope allows for easier addition of mime types into the envelope.
 The MIME type for MIME envelopes can now be set and the iterator for the data is now implemented.
 The SMTP client now tracks its state and doesn't try to close the connection if it's not in a proper idle state.
