@@ -1,3 +1,6 @@
+2011-08-15  Kirit Saelensminde  <kirit@felspar.com>
+ Connection errors now report the host and port they're trying to connect to.
+
 2011-07-30  Kirit Saelensminde  <kirit@felspar.com>
  Made some changes to support Boost 1.46.0.
 
